add logout link to main page

--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -11,6 +11,8 @@
 <p><a th:href="@{/home}">Go to main page</a>
 <p><a th:href="@{/show}">Show items at the store</a>
 <p><a th:href="@{/show/warehouse}">Log in to intranet</a>
+<p style="text-align:left"> <a th:href="@{/logout}">Logout</a>
+
 
 </body>
 </html>
