add logout link to /show

--- a/src/main/resources/templates/printScreen.html
+++ b/src/main/resources/templates/printScreen.html
@@ -5,7 +5,7 @@
     <title>This is a part where data is being print on the screen</title>
 </head>
 <body>
-
+<p style="text-align:left"> <a th:href="@{/logout}">Logout</a>
 <table>
     <tr>
         <th>Name:</th>
