add logout to intranet

--- a/src/main/resources/templates/warehouse.html
+++ b/src/main/resources/templates/warehouse.html
@@ -10,6 +10,8 @@
 
 <p>This is our secret information about details of cargo</p>
 
+<p style="text-align:left"> <a th:href="@{/logout}">Logout</a>
+
 <table>
     <tr>
         <th>Name:</th>
